--- a/Task-1/Pie.html
+++ b/Task-1/Pie.html
@@ -8,7 +8,7 @@
 
 <body class="body">
     <header class="h1"><u><b>Grandma's Lemon Meringue Pie</b></u></header>
-    <img src="D:\Task1\PieCake.jpg" alt="Cake">
+    <img src="PieCake.jpg" alt="Cake">
     <section class="main">
         <p>One 9-inch pie<br>
             30 Min - Prep time<br>
